--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>MY FIRST PAGE</title>
 </head>
 
-<body BGCOLOR="899857" topmargin="0" leftmargin="0" marginwidth="0" marginheight="0">
+<body BGCOLOR="d1cebd" topmargin="0" leftmargin="0" marginwidth="0" marginheight="0">
   <CENTER>
     <hr size='20' color="black"><br><br>
     <p>
