--- a/linkfile1.html
+++ b/linkfile1.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>SECOND PAGE</title>
   </head>
-  <body BGCOLOR='899857'>
+  <body BGCOLOR='ecce6d'>
     <HR SIZE='20' COLOR=BLACK>
     <h1><CENTER>SECOND PAGE</CENTER</h1>
       <HR SIZE='20' COLOR=BLACK>
