--- a/linkfile2.html
+++ b/linkfile2.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Third Page</title>
   </head>
-  <body BGCOLOR='899857'>
+  <body BGCOLOR='c02739'>
     <HR SIZE='20' COLOR=BLACK>
     <h1><CENTER>THIRD PAGE</CENTER</h1>
       <HR SIZE='20' COLOR=BLACK>
