--- a/linkfile2.html
+++ b/linkfile2.html
@@ -8,6 +8,6 @@
     <HR SIZE='20' COLOR=BLACK>
     <h1><CENTER>THIRD PAGE</CENTER</h1>
       <HR SIZE='20' COLOR=BLACK>
-        <img src="FOREST3.JPG" alt="image" border='20'>
+        <img src="FOREST3.jpg" alt="image" border='20'>
   </body>
 </html>
