--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ This is table foot
 
   </center>
 
-  <CENTER> <img src="forest2.jpg" border='20'>
+  <CENTER> <img src="FOREST2.jpg" border='20'>
     <BR>
     <br>
     <BR>
