--- a/linkfile1.html
+++ b/linkfile1.html
@@ -9,5 +9,8 @@
     <h1><CENTER>SECOND PAGE</CENTER</h1>
       <HR SIZE='20' COLOR=BLACK>
         <img src="FOREST.jpg" alt="imagre" border='20'>
+          <center>
+        <a href="linkfile2.html"><b>THIRD PAGE</b></a>
+        </center>
   </body>
 </html>
