--- a/linkfile1.html
+++ b/linkfile1.html
@@ -11,6 +11,9 @@
         <img src="FOREST.jpg" alt="imagre" border='20'>
           <center>
         <a href="linkfile2.html"><b>THIRD PAGE</b></a>
+              
+        <a href="index.html"><b>HOME PAGE</b></a>
+       
         </center>
   </body>
 </html>
