--- a/linkfile2.html
+++ b/linkfile2.html
@@ -9,5 +9,11 @@
     <h1><CENTER>THIRD PAGE</CENTER</h1>
       <HR SIZE='20' COLOR=BLACK>
         <img src="FOREST3.jpg" alt="image" border='20'>
+        
+          <center>
+        <a href="linkfile1.html"><b>SECOND PAGE</b></a>
+            
+        <a href="index.html"><b>HOME PAGE</b></a>
+        </center>
   </body>
 </html>
