--- a/index.html
+++ b/index.html
@@ -151,17 +151,13 @@ This is table foot
     <br>
 
     <hr size='10' color="black"><br><br>
-    <a FONT href="linkfile1.html"><b>SECOND PAGE</b></a>
+    <a FONT href="linkfile1.html"><b>&nbsp &nbsp &nbsp &nbsp Second Page &nbsp &nbsp &nbsp &nbsp</b></a>
     <br><br><br>
-    <a href="linkfile2.html"><b>THIRD PAGE</b></a>
+    <a href="linkfile2.html"><b>&nbsp &nbsp &nbsp &nbsp Third Page &nbsp &nbsp &nbsp &nbsp</b></a>
+    <br><br><br>
+    <a href="contactme.html"><b>&nbsp &nbsp &nbsp &nbsp Contact Me &nbsp &nbsp &nbsp &nbsp</b></a>
     <hr size='10' color="black"><br><br>
   </CENTER>
-
-
-
-
-
-
 
 </body>
 
