--- a/linkfile1.html
+++ b/linkfile1.html
@@ -10,10 +10,11 @@
       <HR SIZE='20' COLOR=BLACK>
         <img src="FOREST.jpg" alt="imagre" border='20'>
           <center>
-        <a href="linkfile2.html"><b>THIRD PAGE</b></a>
-              
-        <a href="index.html"><b>HOME PAGE</b></a>
-       
+        <a href="linkfile2.html"><b>&nbsp &nbsp &nbsp &nbsp Third Page &nbsp &nbsp &nbsp &nbsp</b></a>
+
+        <a href="index.html"><b>&nbsp &nbsp &nbsp &nbsp Home Page &nbsp &nbsp &nbsp &nbsp</b></a>
+        <a href="contactme.html"><b>&nbsp &nbsp &nbsp &nbsp Contact Me &nbsp &nbsp &nbsp &nbsp</b></a>
+
         </center>
   </body>
 </html>
