--- a/linkfile2.html
+++ b/linkfile2.html
@@ -9,11 +9,11 @@
     <h1><CENTER>THIRD PAGE</CENTER</h1>
       <HR SIZE='20' COLOR=BLACK>
         <img src="FOREST3.jpg" alt="image" border='20'>
-        
+
           <center>
-        <a href="linkfile1.html"><b>SECOND PAGE</b></a>
-            
-        <a href="index.html"><b>HOME PAGE</b></a>
+        <a href="linkfile1.html"><b>&nbsp &nbsp &nbsp &nbsp Second Page &nbsp &nbsp &nbsp &nbsp</b></a>
+        <a href="index.html"><b>&nbsp &nbsp &nbsp &nbsp Home Page &nbsp &nbsp &nbsp &nbsp</b></a>
+        <a href="contactme.html"><b>&nbsp &nbsp &nbsp &nbsp Contact Me &nbsp &nbsp &nbsp &nbsp</b></a>
         </center>
   </body>
 </html>
