--- a/contactme.html
+++ b/contactme.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title></title>
   </head>
-  <body>
+  <body bgcolor=ecce6d>
     <CENTER>
       <hr size='20' color=red>
       <h1><u>Contact Me</u></h1>
